--- a/Makefile.in
+++ b/Makefile.in
@@ -3,6 +3,9 @@ JSONGEN_VERSION = @PACKAGE_VERSION@
 SOURCES = $(notdir $(wildcard src/*.erl)) jsg_regexp_parser.erl
 BEAMS = $(patsubst %.erl,ebin/%.beam,$(SOURCES))
 
+LINKTESTS = $(notdir $(wildcard link_tests/*.erl)) 
+LINKBEAMS = $(patsubst %.erl,link_tests/ebin/%.beam,$(LINKTESTS))
+
 EFLAGS = +debug_info -D JSONGEN_VERSION=\"$(JSONGEN_VERSION)\"
 
 all: ebin $(BEAMS)
@@ -10,12 +13,12 @@ all: ebin $(BEAMS)
 main: ${BEAMS}
 
 clean:
-	rm -f ebin/*.beam src/regexp_parser.erl
+	rm -f ebin/*.beam link_tests/ebin/*.beam src/regexp_parser.erl
 
 src/jsg_regexp_parser.erl: src/jsg_regexp_parser.yrl
 	(cd src; erl -noshell -run yecc file jsg_regexp_parser.yrl -run erlang halt)
 
-ebin/%.beam: src/%.erl
+ebin/%.beam: src/%.erl src/jsongen.hrl
 	erlc $(EFLAGS) -o ebin $<
 
 ebin:
@@ -37,6 +40,14 @@ release: main docs
 
 install: release
 	@ scripts/dorelease "." release $(JSONGEN_VERSION)
+
+link_testing: link_tests/ebin $(LINKBEAMS) 
+
+link_tests/ebin:
+	mkdir -p link_tests/ebin
+
+link_tests/ebin/%.beam: link_tests/%.erl src/jsongen.hrl
+	erlc $(EFLAGS) -o link_tests/ebin $<
 
 dotest:
 	erl -pa ebin -noshell -run jsg_rtest test -run erlang halt
