--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 	,{java_erlang, {git, "https://github.com/fredlund/JavaErlang.git", {branch, "master"}}}
 	,{mochijson2, {git, "https://github.com/bjnortier/mochijson2", {branch, "master"}}}
 	,{jesse, {git, "https://github.com/klarna/jesse.git", {branch, "master"}}}
-%%	,{json_schema_validator, {git, "https://github.com/fge/json-schema-validator.git", {branch,"master"}}, [raw]}
+%%	,{json_schema_validator, {git, "https://github.com/fge/json-schema-validator.git"},[raw]}
        ]}.
 
 {edoc_opts, [{doclet, edown_doclet}
@@ -20,4 +20,13 @@
             ]}.
 
 {pre_hooks, [{compile, "_build/default/lib/json_schema_validator/gradlew -p _build/default/lib/json_schema_validator build"}
+            ]}.
+
+{edoc_opts, [{doclet, edown_doclet}
+            , {app_default, "http://www.erlang.org/doc/man"}
+            , {new, true}
+            , {packages, false}
+            , {stylesheet, ""}   % don't copy stylesheet.css
+            , {image, ""}        % don't copy erlang.png
+            , {top_level_readme, {"./README.md", "https://github.com/fredlund/jsongen.git", "master"}}
             ]}.
