Switching to a rebar3 configuration o

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,9 @@
 %%% -*- mode: erlang -*-
+
+%% How to handle the json-schema-validator dependency?
+%% Maybe leave it completely outside the control of rebar (as rebar3 does
+%% not support raw repositories)?
+
 {erl_opts, [debug_info, warnings_as_errors]}.
 
 {deps, [
@@ -19,8 +24,8 @@
             , {top_level_readme, {"./README.md", "https://github.com/fredlund/JavaErlang", "master"}}
             ]}.
 
-{pre_hooks, [{compile, "_build/default/lib/json_schema_validator/gradlew -p _build/default/lib/json_schema_validator build"}
-            ]}.
+%%{pre_hooks, [{compile, "_build/default/lib/json_schema_validator/gradlew -p _build/default/lib/json_schema_validator build"}
+%%            ]}.
 
 {edoc_opts, [{doclet, edown_doclet}
             , {app_default, "http://www.erlang.org/doc/man"}
