--- a/rebar.config
+++ b/rebar.config
@@ -21,7 +21,7 @@
             , {packages, false}
             , {stylesheet, ""}   % don't copy stylesheet.css
             , {image, ""}        % don't copy erlang.png
-            , {top_level_readme, {"./README.md", "https://github.com/fredlund/JavaErlang", "master"}}
+            , {top_level_readme, {"./README.md", "https://github.com/fredlund/jsongen", "master"}}
             ]}.
 
 %%{pre_hooks, [{compile, "_build/default/lib/json_schema_validator/gradlew -p _build/default/lib/json_schema_validator build"}
