Compile Fix - (rebar, Min-Max, Spec, AddP)

--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 {erl_opts, [debug_info, warnings_as_errors]}.
 
 {deps, [
-	{edown, {git, "git://github.com/uwiger/edown.git", {branch, "master"}}}
+	{edown, {git, "https://github.com/uwiger/edown.git", {branch, "master"}}}
 
 	,{java_erlang, {git, "https://github.com/fredlund/JavaErlang.git", {branch, "master"}}}
 	,{mochijson2, {git, "https://github.com/bjnortier/mochijson2", {branch, "master"}}}
