mochikson2 dep fixed

--- a/rebar.config
+++ b/rebar.config
@@ -8,9 +8,8 @@
 
 {deps, [
 	{edown, {git, "https://github.com/uwiger/edown.git", {branch, "master"}}}
-
 	,{java_erlang, {git, "https://github.com/fredlund/JavaErlang.git", {branch, "master"}}}
-	,{mochijson2, {git, "https://github.com/bjnortier/mochijson2", {branch, "master"}}}
+	,{mochijson2, {git, "https://github.com/bjnortier/mochijson2.git", {branch, "master"}}}
 	,{jesse, {git, "https://github.com/klarna/jesse.git", {branch, "master"}}}
 %%	,{json_schema_validator, {git, "https://github.com/fge/json-schema-validator.git"},[raw]}
        ]}.
