pretty print json error

--- a/rebar.config
+++ b/rebar.config
@@ -11,6 +11,7 @@
 	,{java_erlang, {git, "https://github.com/fredlund/JavaErlang.git", {branch, "master"}}}
 	,{mochijson2, {git, "https://github.com/bjnortier/mochijson2.git", {branch, "master"}}}
 	,{jesse, {git, "https://github.com/klarna/jesse.git", {branch, "master"}}}
+	,{jiffy, {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}}
 %%	,{json_schema_validator, {git, "https://github.com/fge/json-schema-validator.git"},[raw]}
        ]}.
 
