Supress warning as errors (Erlang 20)

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 %% Maybe leave it completely outside the control of rebar (as rebar3 does
 %% not support raw repositories)?
 
-{erl_opts, [debug_info, warnings_as_errors]}.
+{erl_opts, [debug_info]}.
 
 {deps, [
 	{edown, {git, "https://github.com/uwiger/edown.git", {branch, "master"}}}
